tested on all resolutions and fixed bleeding, fixed issues with centre justification

--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+.centre {
+    display: block;
+    margin: 0 auto;
+}
+
+.centre-justify {
+    text-align: justify;
+    -moz-text-align-last: center;
+    text-align-last: center;
+}
+
 .text-nav {
     font-family: 'Quicksand', sans-serif;
 }
@@ -7,17 +18,19 @@
 }
 
 .text-paragraph--white {
+    text-align: center;
     color: #ffffff;
 }
 
 .text-paragraph--black {
+    text-align: center;
     color: #000000;
 }
 
 .panel--half-size {
-    height: 50vh;
+    height: 50%;
 }
 
 .panel--full-size {
-    width: 100vh;
+    width: 100%;
 }
